# taskr

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: auth_api.rs  mod.rs  task_api.rs  user_api.rs
src/dto/: create_task.rs  create_user.rs  mod.rs  task_preview.rs  token_claims.rs  update_task_status.rs  update_user.rs
src/model/: mod.rs  task_model.rs  user_model.rs
src/repository/: mod.rs  task_repository.rs  user_repository.rs
src/service/: email_service.rs
src/validator/: mod.rs  request_validators.rs
